--- a/index.html
+++ b/index.html
@@ -10,21 +10,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <!-- Header section. -->
+
     <header class="header">
         <div class="banner-text">
             <h1>All Thinks Are<br> Possible If You <br> Believe</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-        
-    <button target="blank">Contact Us</button>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+
+            <button target="blank">Contact Us</button>
         </div>
     </header>
+    <!-- header end. -->
+    <main>
+        <!-- my falure section -->
+        <section class="person">
+            <img src="images/person.png" alt="">
+            <div class="person-text">
+                <h2>My failures of <br> previous year</h2>
+                <p> Contrary to popular belief,
+                    Lorem Ipsum is not simply
+                    random text. It has roots in a
+                    piece of classical Latin
+                    literature from 45 BC, making
+                    it over 2000 years old.
+                    Richard McClintock.</p>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i>
+                        Contrary to popular
+                        belief, is not simply.
+                    </li>
+                    <li><i class="fa-solid fa-check"></i>
+                        Contrary to popular
+                        belief.</li>
+                    <li><i class="fa-solid fa-check"></i>
+                        Contrary to popular , is
+                        not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>
+                        Contrary to popular
+                        belief, is not simply.
+                    </li>
+                    <li><i class="fa-solid fa-check"></i>
+                        Contrary to popular
+                        simply.</li>
+                </ul>
+            </div>
 
-
-
-    <main></main>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
