--- a/index.html
+++ b/index.html
@@ -66,8 +66,71 @@
             </div>
 
         </section>
+        <!-- My plans section -->
+
+        <section class="my-plans">
+            <h2>My Plans</h2>
+            <div class="items">
+                <div class="item">
+                    <img src="images/icons/web.png" alt="">
+                    <h2>Web Development</h2>
+                    <p>I want to start</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/js.png" alt="">
+                    <h2>Javascript</h2>
+                    <p>I want to learn</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>I want to end</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h2>Ecommerce</h2>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- positive mindset section -->
+
+        <section class="positive-mind">
+            <div class="div">
+                <h2>Awlays keep a positive <br> mindset</h2>
+                <button>Call Now</button>
+            </div>
+        </section>
+
     </main>
-    <footer></footer>
+    <footer>
+        <section class="full-footer">
+            <div class="footer-left">
+                <h2> Future</h2>
+                <p> There are many variations of
+                    passages of Lorem Ipsum <br>
+                    available, but the majority
+                    have suffered alteration in
+                    some <br> form, by injected
+                    humour,
+                    or randomised words
+                </p>
+                <p>Email: nazimuddin2106@gmail.com </p>
+                <p>Phone: 01600 00 00 00</p>
+                <div class="icon">
+                    <img src="images/icons/fb.png" alt=""><img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+
+                </div>
+            </div>
+            <form>
+                <h2>Subscribe </h2>
+                <input type="text" name="" id="" placeholder="Enter your email">
+                <br>
+                <button>Subscribe</button>
+            </form>
+        </section>
+    </footer>
 </body>
 
 </html>
