--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -26,7 +25,6 @@
             <h1>All Thinks Are<br> Possible If You <br> Believe</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                 in some form, by injected humour, or randomised words</p>
-
             <button target="blank">Contact Us</button>
         </div>
     </header>
@@ -110,10 +108,9 @@
                 <p> There are many variations of
                     passages of Lorem Ipsum <br>
                     available, but the majority
-                    have suffered alteration in
-                    some <br> form, by injected
-                    humour,
-                    or randomised words
+                    have suffered alteration <br>in
+                    some form,by injected
+                    humour, or randomised words
                 </p>
                 <p>Email: nazimuddin2106@gmail.com </p>
                 <p>Phone: 01600 00 00 00</p>
