--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
 
         </section>
+     
         <!-- My plans section -->
 
         <section class="my-plans">
@@ -91,6 +92,24 @@
                 </div>
             </div>
         </section>
+           <!-- my work section (bonus section)  -->
+
+           <section class="my-works">
+            <h1>My Latest Work</h1>
+            <div class="work">
+                <img src="images/img-01.jpg" alt>
+                <P>project 1</P>
+            </div>
+            <div class="work">
+                <img src="images/img-02.png" alt>
+                <P>project 2</P>
+            </div>
+            <div class="work">
+                <img src="images/img-03.jpg" alt>
+                <P>project 3</P>
+            </div>
+        </section>
+
         <!-- positive mindset section -->
 
         <section class="positive-mind">
